# ishitmyself

./: Cargo.toml  README.md
src/: export.rs  lib.rs  test.rs  util.rs
src/game/: cs.rs  matrix.rs  mod.rs  world_area_time.rs
src/game/cs/: camera.rs  chr_ins.rs  ez_select_bot.rs  file.rs  session_manager.rs  task_group.rs  world_chr_man.rs  world_chr_man_dbg.rs
src/game/dl/: mutex.rs  string.rs
src/game/fd4/: basic_hash_string.rs  param_repository.rs  resource.rs  time.rs
src/util/: debug_display.rs  patch.rs  singleton.rs
