[package]
name = "eldenring"
version = "1.3.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"

[dependencies]
log = "0.4.1"
toml = "0.7.2"
rand = "0.8"
broadsword = { git = "https://github.com/vswarte/broadsword.git" }
tracing = "0.1"
tracing-subscriber = "0.3"
hudhook = "0.6"

[dependencies.zerocopy]
version = "0.7"
features = ["derive"]

[dependencies.retour]
version = "0.3"
features = [
    "static-detour",
]

[dependencies.windows]
version = "0.54"
features = [
    "Win32_Foundation",
	"Win32_System_Kernel",
	"Win32_System_Threading",
	"Win32_UI_WindowsAndMessaging",
	"Win32_UI_Input_KeyboardAndMouse",
	"Win32_System_Diagnostics_Debug",
]

[patch.crates-io]
libudis86-sys = { git = 'https://github.com/vars1ty/libudis86-sys.git' }
